--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "migrate:down": "npm run build && node -r ts-node/register database/migrate.ts down",
     "migrate:down:all": "npm run build && node -r ts-node/register database/migrate.ts down --to 0",
     "migrate:create": "npm run build && node -r ts-node/register database/migrate.ts create",
+    "seed": "ts-node src/database/seeder/index.ts",
     "start:dev": "nodemon src/server.ts",
     "start": "node dist/server.js"
   },
@@ -18,6 +19,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.8.4",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "kysely": "^0.27.4",
