--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "ioredis": "^5.4.1",
     "kysely": "^0.27.4",
     "kysely-migration-cli": "^0.4.2",
     "pg": "^8.13.1",
